--- a/.settings
+++ b/.settings
@@ -1,6 +1,7 @@
 name: name
 version: v1
 service: ServiceFromProto
+servicePackage: servicepackage
 kratosLayout: https://github.com/timurkash/kratos-layout.git
 templateRepo: github.com/company/project/back/kratos-template
 
